// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`AppBar component > renders > by default no breadcrumbs, no bulkactions, no sharesnavigation but viewoptions and sidebartoggle 1`] = `
"<div id="files-app-bar" class="px-4 bg-role-surface rounded-t-xl [display:inherit] top-0 z-20 sticky">
  <div class="files-topbar py-2">
    <h1 class="sr-only">ExampleTitle</h1>
    <oc-hidden-announcer-stub announcement="No items selected." level="polite"></oc-hidden-announcer-stub>
    <div class="flex items-center files-app-bar-controls min-h-13 justify-end">
      <!--v-if-->
      <portal-target name="app.runtime.mobile.nav"></portal-target>
      <!--v-if-->
      <div id="files-app-bar-controls-right" class="flex">
        <view-options-stub perpagestorageprefix="files" hashiddenfiles="true" hasfileextensions="true" haspagination="true" paginationoptions="20,50,100,250,500" perpagequeryname="items-per-page" perpagedefault="100" viewmodedefault="resource-tiles" viewmodes=""></view-options-stub>
      </div>
    </div>
    <div class="files-app-bar-actions flex items-center justify-end mt-1 min-h-10 gap-2">
      <div class="flex-1 flex justify-start items-center">
        <!--v-if-->
      </div>
    </div>
  </div>
</div>"
`;

exports[`AppBar component > renders > if given, with content in the actions slot 1`] = `
"<div id="files-app-bar" class="px-4 bg-role-surface rounded-t-xl [display:inherit] top-0 z-20 sticky">
  <div class="files-topbar py-2">
    <h1 class="sr-only">ExampleTitle</h1>
    <oc-hidden-announcer-stub announcement="No items selected." level="polite"></oc-hidden-announcer-stub>
    <div class="flex items-center files-app-bar-controls min-h-13 justify-end">
      <!--v-if-->
      <portal-target name="app.runtime.mobile.nav"></portal-target>
      <!--v-if-->
      <div id="files-app-bar-controls-right" class="flex">
        <view-options-stub perpagestorageprefix="files" hashiddenfiles="true" hasfileextensions="true" haspagination="true" paginationoptions="20,50,100,250,500" perpagequeryname="items-per-page" perpagedefault="100" viewmodedefault="resource-tiles" viewmodes=""></view-options-stub>
      </div>
    </div>
    <div class="files-app-bar-actions flex items-center justify-end mt-1 min-h-10 gap-2">
      <div class="flex-1 flex justify-start items-center"><button class="action-slot">Click</button>
        <!--v-if-->
      </div>
    </div>
  </div>
</div>"
`;

exports[`AppBar component > renders > if given, with content in the content slot 1`] = `
"<div id="files-app-bar" class="px-4 bg-role-surface rounded-t-xl [display:inherit] top-0 z-20 sticky">
  <div class="files-topbar py-2">
    <h1 class="sr-only">ExampleTitle</h1>
    <oc-hidden-announcer-stub announcement="No items selected." level="polite"></oc-hidden-announcer-stub>
    <div class="flex items-center files-app-bar-controls min-h-13 justify-end">
      <!--v-if-->
      <portal-target name="app.runtime.mobile.nav"></portal-target>
      <!--v-if-->
      <div id="files-app-bar-controls-right" class="flex">
        <view-options-stub perpagestorageprefix="files" hashiddenfiles="true" hasfileextensions="true" haspagination="true" paginationoptions="20,50,100,250,500" perpagequeryname="items-per-page" perpagedefault="100" viewmodedefault="resource-tiles" viewmodes=""></view-options-stub>
      </div>
    </div>
    <div class="files-app-bar-actions flex items-center justify-end mt-1 min-h-10 gap-2">
      <div class="flex-1 flex justify-start items-center">
        <!--v-if-->
      </div>
    </div>
    <div class="content-slot">Foo</div>
  </div>
</div>"
`;
